National: fixed overflowing header issue in Chrome.

--- a/web/interface/themes/national/css/default.css
+++ b/web/interface/themes/national/css/default.css
@@ -19,8 +19,10 @@ body {
     background-repeat: no-repeat;
     background-size: 100% auto;
     width:100%;
-    height:100%;
     position:absolute;
+    max-height: 500px;
+    height:100%;
+    overflow: hidden;
 }
 .container {
     position:relative;
